--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@aposoftworks/yamiassu",
-	"version": "0.2.3",
+	"version": "0.3.1",
 	"description": "The default css styling framework used by Apo Softworks",
 	"main": "index.js",
 	"scripts": {
@@ -15,7 +15,12 @@
 		"type": "git",
 		"url": "git+https://github.com/aposoftworks/yamiassu.git"
 	},
-	"keywords": ["css", "styling", "yamiassu", "framework"],
+	"keywords": [
+		"css",
+		"styling",
+		"yamiassu",
+		"framework"
+	],
 	"author": "",
 	"license": "BSD-3-Clause",
 	"bugs": {
